# app-command

./: .gitignore  Makefile  Pipfile  docker-compose.yaml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
devtools/requirements/: dev.txt
docker/: docker-compose.yaml
examples/commands/: insert_assuntos.py
scripts/: build.sh
src/gspl/: args.py
src/gspl/cli/: __init__.py  __main__.py
src/gspl/config/: cli_config.py  open_search.py
src/gspl/console/: app.py  application.py  utils.py
src/gspl/console/commands/: application.py  cmd.py  command.py
