[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = true
install_requires =
    python-dateutil
    tomlkit
    typing-extensions
    jinja2
    boto3
    pydantic
    typer
package_dir =
    =src

[options.package_data]
gspl = py.typed

[options.packages.find]
where = src

exclude =
    examples
    tests
